--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ParkMap</title>
+    <title>우리동네 공원 지도</title>
 </head>
 <body>
     <div id="root"></div>
